Redacted personal information

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <h2>Contact Information</h2>
             <address>
                 <ul>
-                    <li>Ernesto Espinoza #320</li>
-                    <li>Chihuahua, Chihuahua Zip. 31134</li>
-                    <li>+52 (614) 397 0376</li>
-                    <li>Jorge.ASC@outlook.com</li>
+                    <li><b>Adress:</b> REDACTED</li>
+                    <li><b>City:</b>Chihuahua, Chihuahua Zip. 31134</li>
+                    <li><B>Phone:</B>REDACTED</li>
+                    <li><b>e-Mail:</b>REDACTED</li>
                 </ul>
             </address>
         </section>
