--- a/index.html
+++ b/index.html
@@ -19,108 +19,8 @@
     <meta property="og:title" content="Jorge Sánchez CV | IT & Operations">
     <meta property="og:description"
         content="Review Jorge's experience in critical systems administration, IT support, and operational leadership.">
-
-</head>
-
-<body>
-    <header>
-        <h1>Jorge Alberto Sánchez Celaya</h1>
-        <h3>IT Systems Administrator / Junior Frontend Developer</h3>
-    </header>
-
-    <main>
-        <section id="contact-info">
-            <h2>Contact Information</h2>
-            <address>
-                <ul>
-                    <li><b>Adress:</b> REDACTED</li>
-                    <li><b>City:</b>Chihuahua, Chihuahua Zip. 31134</li>
-                    <li><B>Phone:</B>REDACTED</li>
-                    <li><b>e-Mail:</b>REDACTED</li>
-                </ul>
-            </address>
-        </section>
-
-        <section id="skills">
-            <h2>Skills</h2>
-
-            <h4>Hard Skills</h4>
-            <p>Server Administration, IT Infrastructure Management, Backup and Disaster Recovery (BDR), Tier 1 & 2
-                Technical Support, CONTPAQi Software Management, Corporate Email Administration, IT Procurement
-                Management, HTML, CSS, JavaScript, Accessibility, Responsive Web Design.</p>
-
-            <h4>Soft Skills</h4>
-            <p>Support Leadership, Internal Client Orientation, Critical Problem Resolution, Vendor Management,
-                Operational Oversight, Autonomy and Proactivity, Professional Bilingualism, Interpersonal Communication.
-            </p>
-        </section>
-
-        <section id="education">
-            <h2>Education</h2>
-            <ul>
-                <li>
-                    <h3>Universidad Tecnológica de Chihuahua - Engineering on Software Management and Development</h3>
-                    <p>August 2019 - September 2025 (Expected Graduation)</p>
-                </li>
-            </ul>
-        </section>
-
-        <section id="experience">
-            <h2>Professional Experience</h2>
-
-            <article>
-                <h3>Corporativo Fiscal</h3>
-                <p>November 2023 - Currently</p>
-                <ul>
-                    <li><b>Critical Fiscal Systems Administration:</b> Led the management and operation of the
-                        **CONTPAQi** server, ensuring the integrity and high availability of critical accounting and
-                        fiscal data.</li>
-                    <li><b>Business Continuity and Data Security:</b> Designed and **implemented** a systematic backup
-                        protocol, mitigating data loss risk and enabling rapid recovery for business continuity.</li>
-                    <li><b>Holistic IT and Resource Management:</b> Managed the complete IT asset lifecycle, including
-                        procurement (hardware/software), licensing, and administration of key vendors (internet and
-                        telecommunications).</li>
-                    <li><b>Strategic Support and Technical Leadership:</b> Served as the single point of contact for
-                        technical support for **30+ employees**, optimizing efficiency in technology usage and resolving
-                        critical incidents.</li>
-                </ul>
-            </article>
-
-            <article>
-                <h3>Datamark Inc.</h3>
-                <p>November 2020 - November 2023</p>
-
-                <h4>Operations Supervisor, Medical Interpreters (2022 - 2023)</h4>
-                <ul>
-                    <li>**Operational Leadership:** Managed and led the daily operations of a team of medical
-                        interpreters, ensuring adherence to quality standards and service metrics (KPIs).</li>
-                    <li>**Quality & Compliance:** Oversaw interpreter performance, implementing quality control measures
-                        to maintain high accuracy and strict adherence to confidentiality guidelines (HIPAA).</li>
-                </ul>
-
-                <h4>HR Assistant (2021 - 2022)</h4>
-                <ul>
-                    <li>**Personnel Administration:** Managed the full recruitment and onboarding process for new
-                        employees, ensuring seamless integration.</li>
-                    <li>**Employee Relations:** Served as the main point of contact for employees regarding benefits,
-                        internal procedures, and HR-related administrative questions.</li>
-                </ul>
-
-                <h4>Telephone Medical Interpreter (2020 - 2021)</h4>
-                <ul>
-                    <li>**Bilingual Communication:** Provided highly accurate, professional real-time medical
-                        interpretation between healthcare staff and patients.</li>
-                </ul>
-            </article>
-        </section>
-    </main>
-
-    <footer>
-        <h4>Socials</h4>
-        <a href="https://github.com/Enibox">GitHub</a>
-    </footer>
-
-</body>
+    <link href="./styles.css" rel="stylesheet">
+    </head>
 
 </html>
 
